[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "ImSwitchUC2"
description = "Microscopy control"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Benedict Diederich", email = "benedictdied@gmail.com"},
    {name = "Xavier Casas Moreno"},
]
maintainers = [
    {name = "Benedict Diederich", email = "benedictdied@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "setuptools >= 42",
    "pydantic==2.11.4",
    "coloredlogs >= 15",
    "colour-science >= 0.3",
    "dataclasses-json >= 0.5",
    "h5py >= 2.10",
    "pyvisa-py==0.4.1",
    "lantzdev >= 0.5.2",
    "luddite >= 1",
    "nidaqmx >= 0.5.7",
    "numpy==2.1.2",
    "packaging >= 19",
    "psutil >= 5.4.8",
    "pyserial >= 3.4",
    "requests >= 2.25",
    "scikit-image==0.25.2",
    "Send2Trash >= 1.8",
    "tifffile >= 2020.11.26",
    "dask[complete] >= 2024.8.0",
    "fastapi >= 0.86.0",
    "uvicorn[standard] >= 0.19.0",
    "matplotlib == 3.9.2",
    "opencv-python-headless",
    "aiortc >= 1.9.0",
    "jupyter",
    "python-multipart >= 0.0.5",
    "piexif >= 1.1.3",
    "NanoImagingPack==2.1.4",
    # Pin below 0.1.7: that PyPI release added imswitchuc2 as a dep, creating a
    # circular dependency and an av==17 conflict with our aiortc-compatible av==13.
    "imswitchclient>=0.1.2",
    "psygnal",
    "python-socketio[asyncio]==5.11.4",
    "jupyterlab==4.2.5",
    "python-dateutil >= 2.8.1",
    "zarr>=3.0.0a0",
    "numcodecs>=0.13.1",
    "aiohttp>=3.9.4",
    "arkitekt-next[all]>=0.39.5",
    "koil>=2.0.5",
    "msgpack>=1.0.4",
    "esptool",
    "av==13.1.0",
    "uc2-rest>=0.2.0.33",
    "unitelabs-sila",
    "unitelabs-cdk",
    "opencv-python>=4.13.0.92",
    "mikro-next>=1",
]

[project.optional-dependencies]
Microeye = [
    "numba>=0.61.2",
]
Lepmon = [
    "smbus2",
    "smbus",
    "RPi.GPIO",
    "luma.oled",
]
Ashlar = [
    "ashlarUC2",
]
imjoy = [
    "imjoy-rpc==0.5.59",
    "imjoy_rpc",
    "imjoy",
]
dev = [
    "pytest",
]
omero = [
    "omero-py >= 5.6.0",
]

[project.urls]
Homepage = "https://github.com/openuc2/ImSwitch"
"Bug Tracker" = "https://github.com/openuc2/ImSwitch/issues"

[project.scripts]
imswitch = "imswitch.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "imswitch.__version__"}

[tool.setuptools.packages.find]
include = ["imswitch*"]

[tool.setuptools.package-data]
"*" = ["*"]

[project.entry-points."imswitch.implugins.detectors"]

[project.entry-points."imswitch.implugins.lasers"]

[project.entry-points."imswitch.implugins.positioner"]

[project.entry-points."jupyter_client.kernel_provisioners"]
imswitch-provisioner = "imswitch.imcontrol.model.jupyter_connection:ExistingProvisioner"

[tool.uv]
# Force psygnal to be installed from source (no binary wheel).
# The compiled (mypyc) version forbids subclassing which ImSwitch requires.
# See https://github.com/pyapp-kit/psygnal/issues/330
no-binary-package = ["psygnal"]

[tool.ruff]
# Exclude directories
exclude = [
    "imswitch/_data",
    "build",
    "ImTools",
    "imswitch/imcontrol/model/interfaces/pyicic",
]
# Line length configuration (matching flake8's max-line-length)
line-length = 100

[tool.ruff.lint]
# Enable the following rule categories:
# E - pycodestyle errors
# F - Pyflakes
# W - pycodestyle warnings
# C90 - mccabe complexity
select = ["E", "F", "W", "C90"]

# Ignore F401 (unused imports) in __init__.py files (matching flake8 per-file-ignores)
per-file-ignores = {"__init__.py" = ["F401"]}

[tool.ruff.lint.mccabe]
# Maximum McCabe complexity (matching flake8's max-complexity)
max-complexity = 10
